# VisionPipe

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEV_SPEC.md  README.md  pyproject.toml
.claude/: settings.json  settings.json.anyrouter
.claude/skills/vp-auto-dev/: .spec_hash  SKILL.md
.claude/skills/vp-auto-dev/references/: 00-dev-env.md  01-overview.md  02-features.md  03-tech-stack.md  04-testing.md  05-architecture.md  06-schedule.md  07-dev-spec.md
.claude/skills/vp-auto-dev/scripts/: sync_spec.py
.github/workflows/: ci.yml
cmake/: VisionPipeTensorRT.cmake
models/efficientnet_b0/: convert.sh
models/resnet50/: convert.sh
models/shufflenetv2/: convert.sh
models/yolov8/: convert.sh
python/: CMakeLists.txt
python/bindings/: placeholder.cpp
python/visionpipe/: __init__.py
src/core/: CMakeLists.txt  bounded_queue.h  error.h  frame.h  infer_node.cpp  infer_node.h  logger.cpp  logger.h  model_registry.cpp  model_registry.h  node_base.cpp  node_base.h  pipeline.cpp  pipeline.h  pipeline_builder.h  pipeline_manager.cpp  pipeline_manager.h  stub.cpp  tensor.h
src/hal/: CMakeLists.txt  imodel_engine.h  stub.cpp
src/hal/nvidia/: cuda_allocator.cpp  cuda_allocator.h  trt_exec_context.cpp  trt_exec_context.h  trt_model_engine.cpp  trt_model_engine.h
src/nodes/: CMakeLists.txt
src/nodes/infer/: classifier_node.cpp  classifier_node.h  detector_node.cpp  detector_node.h
src/nodes/infer/post/: detection_decoder.cpp  detection_decoder.h
src/nodes/infer/pre/: letterbox_resize.cpp  letterbox_resize.h
src/nodes/source/: file_source.cpp  file_source.h  rtsp_source.cpp  rtsp_source.h  source_config.h
tests/: CMakeLists.txt
tests/integration/cpp/: test_classifier_node.cpp  test_detector_node.cpp  test_source_nodes.cpp  test_trt_engine.cpp
tests/unit/cpp/: test_bounded_queue.cpp  test_cmake_build.cpp  test_logger.cpp  test_model_registry.cpp  test_parallel_workers.cpp  test_pipeline_dag.cpp  test_pipeline_manager.cpp
